kubernetes/kustomize/app/overlays/dev/app-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: app
spec:
  ingressClassName: nginx
  rules:
    - host: "app-kustom.localdev.me"
      http:
        paths:
          - pathType: Prefix
            backend:
              service:
                name: app
                port:
                  number: 8080
            path: /
